force-app/main/default/objects/Software_Download_Order_Line__c/Software_Download_Order_Line__c.object-meta.xml
<CustomObject>
    <description>Softrax order detail for downloadable software</description>
    <label>Software Download Order Line</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Software Download Order Line Instance</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Software Download Order Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>