force-app/main/default/objects/Software_Download_Order_Line__c/fields/AccountID__c.field-meta.xml
<CustomField>
    <fullName>AccountID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AccountID</description>
    <label>AccountID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Software Download Order Lines</relationshipLabel>
    <relationshipName>R00N60000001Y2qaEAC</relationshipName>
    <type>Lookup</type>
</CustomField>