force-app/main/default/objects/Software_Download_Order_Line__c/fields/comments2__c.field-meta.xml
<CustomField>
    <fullName>comments2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>comments2</label>
    <length>10</length>
    <type>Text</type>
</CustomField>