force-app/main/default/objects/Software_Download_Order_Line__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product or Sku Code</description>
    <label>Product Code</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Software Download Order Lines</relationshipLabel>
    <relationshipName>R00N60000001Y2qpEAC</relationshipName>
    <type>Lookup</type>
</CustomField>