force-app/main/default/objects/Software_Download_Order_Line__c/fields/Shipto_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Shipto_Contact_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ship to Contact ID for this item</description>
    <label>Shipto Contact ID</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Software Download Order Lines</relationshipLabel>
    <relationshipName>R00N60000001Y3knEAC</relationshipName>
    <type>Lookup</type>
</CustomField>