force-app/main/default/objects/Software_Download_Order_Line__c/fields/Sku_Revision__c.field-meta.xml
<CustomField>
    <fullName>Sku_Revision__c</fullName>
    <description>Sku Revision</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Sku Revision</label>
    <length>10</length>
    <type>Text</type>
</CustomField>